--- a/On Watch/res/layout-land/home_view.xml
+++ b/On Watch/res/layout-land/home_view.xml
@@ -1,19 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="horizontal" >
+        android:orientation="vertical" >
+      
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1">
         
-	<include
-			layout="@layout/clock_view"
-			android:layout_width="fill_parent"
-			android:layout_height="fill_parent"
-            android:layout_weight="1" />
+	   <include
+			    layout="@layout/clock_view"
+			    android:layout_width="wrap_content"
+			    android:layout_height="fill_parent"
+                android:layout_weight="1" />
     
-	<include
-			layout="@layout/location_view"
-			android:layout_width="wrap_content"
-			android:layout_height="fill_parent"
-            android:layout_weight="1" />
+	   <include
+			    layout="@layout/location_view"
+			    android:layout_width="wrap_content"
+			    android:layout_height="fill_parent"
+                android:layout_weight="1" />
+
+    </LinearLayout>
 
 	<LinearLayout
 		android:orientation="horizontal"
