--- a/On Watch/res/layout-land/home_view.xml
+++ b/On Watch/res/layout-land/home_view.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:orientation="vertical" >
       
     <LinearLayout
@@ -28,12 +30,6 @@
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content" >
 
-		<ImageButton
-			android:id="@+id/flip_left"
-			android:layout_width="wrap_content" android:layout_height="wrap_content"
-			android:background="@drawable/btn_thin"
-			android:src="@drawable/ic_left" />
-
 		<org.hermit.onwatch.ChimeButton
 			android:id="@+id/home_chime_button" android:layout_width="fill_parent"
 			android:layout_height="fill_parent" android:layout_weight="1"
@@ -43,12 +39,6 @@
 			android:id="@+id/home_alert_button" android:layout_width="fill_parent"
 			android:layout_height="fill_parent" android:layout_weight="1"
 			android:background="@drawable/btn_thin" />
-
-		<ImageButton
-			android:id="@+id/flip_right"
-			android:layout_width="wrap_content" android:layout_height="wrap_content"
-			android:background="@drawable/btn_thin"
-			android:src="@drawable/ic_right" />
 
 	</LinearLayout>
 
