--- a/On Watch/res/layout-land/clock_view.xml
+++ b/On Watch/res/layout-land/clock_view.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:orientation="vertical" >
 
     <!-- The date line. -->
@@ -29,17 +31,41 @@
     <!-- The clocks. -->
     <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:orientation="vertical" >
-            
-        <AnalogClock
-            	android:layout_width="100dp"
-            	android:layout_height="100dp" />
 
-    	<LinearLayout
-            	android:layout_width="wrap_content"
-            	android:layout_height="wrap_content"
-            	android:orientation="vertical" >
+        <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+                
+            <AnalogClock
+            	    android:layout_width="fill_parent"
+            	    android:layout_height="fill_parent"
+                    android:layout_weight="1" />
+                    
+            <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:orientation="vertical" >
+
+            <org.hermit.onwatch.BellWidget
+                    android:id="@+id/clock_bells"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
+            <org.hermit.onwatch.BarTextWidget
+                    style="@style/ClockWatch"
+                    android:id="@+id/clock_watchcrew"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:singleLine="true" />
+
+            </LinearLayout>
+
+        </LinearLayout>
 
     		<TextView
 					style="@style/ClockTime"
@@ -52,18 +78,6 @@
     				android:id="@+id/clock_watch"
             		android:layout_width="fill_parent"
             		android:layout_height="wrap_content" />
-            		
-           	<org.hermit.onwatch.BellWidget
-     				android:id="@+id/clock_bells"
-            		android:layout_width="fill_parent"
-            		android:layout_height="wrap_content" />
-
-    		<org.hermit.onwatch.BarTextWidget
-					style="@style/ClockWatch"
-    				android:id="@+id/clock_watchcrew"
-            		android:layout_width="fill_parent"
-            		android:layout_height="wrap_content"
-            		android:singleLine="true" />
 
     		<TextView
 					style="@style/ClockWatch"
@@ -71,8 +85,6 @@
             		android:layout_width="fill_parent"
             		android:layout_height="wrap_content"
             		android:singleLine="true" />
-
-   	 	</LinearLayout>
 
     </LinearLayout>
 
