--- a/On Watch/res/layout/home_view.xml
+++ b/On Watch/res/layout/home_view.xml
@@ -1,29 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/home_view"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:orientation="vertical" >
-      
-    <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1">
+        android:orientation="horizontal" >
         
-	   <include
-			    layout="@layout/clock_view"
-			    android:layout_width="fill_parent"
-			    android:layout_height="fill_parent"
-                android:layout_weight="1" />
+   <include
+		    layout="@layout/clock_view"
+		    android:layout_width="0dip"
+		    android:layout_height="fill_parent"
+            android:layout_weight="30" />
     
-	   <include
-			    layout="@layout/location_view"
-			    android:layout_width="fill_parent"
-			    android:layout_height="fill_parent"
-                android:layout_weight="1" />
-
-    </LinearLayout>
+   <include
+		    layout="@layout/location_view"
+		    android:layout_width="0dip"
+		    android:layout_height="fill_parent"
+            android:layout_weight="70" />
 
 </LinearLayout>
 
