--- a/On Watch/res/drawable/grey_bar_bg.xml
+++ b/On Watch/res/drawable/grey_bar_bg.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#ff606060"/>
+    <stroke
+        android:width="1px"
+        android:color="#ff606060" />
 </shape>
 
