--- a/On Watch/res/layout/location_view.xml
+++ b/On Watch/res/layout/location_view.xml
@@ -57,6 +57,41 @@
             android:layout_height="wrap_content"
             android:singleLine="false"
             android:lines="2" />
+
+    <TableLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1" android:shrinkColumns="*" android:stretchColumns="*">
+        <TableRow android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:text="@string/lab_passage_start" />
+            <TextView android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/pass_start_place" />
+            <TextView android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/pass_start_time" />
+        </TableRow>
+        
+        <TableRow android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:text="@string/lab_passage_end" />
+            <TextView android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/pass_end_place" />
+            <TextView android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/pass_end_time" />
+        </TableRow>
+        
+        <TableRow android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:text="@string/lab_passage_status" />
+            <TextView android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/pass_stat_desc" />
+            <TextView android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/pass_stat_aux" />
+        </TableRow>
+    </TableLayout>
     		
 </LinearLayout>
 
