--- a/On Watch/res/layout/location_view.xml
+++ b/On Watch/res/layout/location_view.xml
@@ -61,37 +61,51 @@
     <TableLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_weight="1" android:shrinkColumns="*" android:stretchColumns="*">
-        <TableRow android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:text="@string/lab_passage_start" />
-            <TextView android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/pass_start_place" />
-            <TextView android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/pass_start_time" />
+            android:layout_weight="1"
+            android:shrinkColumns="*"
+            android:stretchColumns="*">
+
+        <TableRow
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            <TextView android:id="@+id/pass_name"
+                    style="@style/LocationAuxText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            <TextView android:id="@+id/pass_desc"
+                    style="@style/LocationAuxText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
         </TableRow>
         
-        <TableRow android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:text="@string/lab_passage_end" />
-            <TextView android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/pass_end_place" />
-            <TextView android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/pass_end_time" />
-        </TableRow>
-        
-        <TableRow android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:text="@string/lab_passage_status" />
-            <TextView android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/pass_stat_desc" />
-            <TextView android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/pass_stat_aux" />
+        <TableRow
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            <TextView android:id="@+id/pass_status"
+                    style="@style/LocationAuxText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            <TextView android:id="@+id/pass_dist"
+                    style="@style/LocationAuxText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
         </TableRow>
     </TableLayout>
     		
+    <HorizontalScrollView
+            android:id="@+id/weather_scroller"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:scrollbarAlwaysDrawHorizontalTrack="true"
+            android:scrollbarAlwaysDrawVerticalTrack="false" >
+        
+        <org.hermit.onwatch.WeatherWidget
+                android:id="@+id/weather_chart"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent" />
+
+    </HorizontalScrollView>
+
 </LinearLayout>
 
