--- a/On Watch/res/menu/main_menu.xml
+++ b/On Watch/res/menu/main_menu.xml
@@ -19,6 +19,16 @@
           android:title="@string/menu_prefs"
           android:icon="@drawable/ic_menu_preferences" />
 
+    <!-- "Backup". -->
+    <item android:id="@+id/menu_backup"
+          android:title="@string/menu_backup"
+          android:icon="@drawable/ic_menu_help" />
+
+    <!-- "Restore". -->
+    <item android:id="@+id/menu_restore"
+          android:title="@string/menu_restore"
+          android:icon="@drawable/ic_menu_help" />
+
     <!-- "Help". -->
 	<item android:id="@+id/menu_help"
           android:title="@string/menu_help"
