--- a/On Watch/res/menu/main_menu.xml
+++ b/On Watch/res/menu/main_menu.xml
@@ -48,6 +48,17 @@
 	<item android:id="@+id/menu_exit"
           android:title="@string/menu_exit"
     	  android:icon="@drawable/ic_menu_close" />
+	   
+    <!-- "Debug" submenu. -->
+    <item android:id="@+id/menu_debug"
+          android:title="@string/menu_debug">
+          
+        <menu>
+            <item android:id="@+id/menu_debug_alerts"
+                    android:title="@string/menu_debug_alerts" />
+        </menu>
+         
+    </item>
 	
 </menu>
 
