--- a/On Watch/res/layout/location_view.xml
+++ b/On Watch/res/layout/location_view.xml
@@ -1,34 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical" >
-         
-    <TextView
-			style="@style/LocationStatus"
-    		android:id="@+id/location_status"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
-         
-    <TextView
-			style="@style/LatLongText"
-    		android:id="@+id/location_lat"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
-        
-    <TextView
-			style="@style/LatLongText"
-    		android:id="@+id/location_lon"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
+        android:layout_height="fill_parent" >
 
     <TableLayout
-    		android:stretchColumns="*"
-    		android:paddingLeft="6dp"
-     		android:paddingRight="6dp"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" >
+            android:id="@+id/location_data"
+            android:shrinkColumns="*"
+            android:stretchColumns="*"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="false"
+            android:layout_alignParentLeft="true">
+         
+        <TextView
+                style="@style/LocationStatus"
+                android:id="@+id/location_status" />
+         
+        <TextView
+                style="@style/LatLongText"
+                android:id="@+id/location_lat" />
+        
+        <TextView
+                style="@style/LatLongText"
+                android:id="@+id/location_lon" />
             
 		<TableRow>
          
@@ -47,58 +42,36 @@
     				android:id="@+id/location_speed" />
 		
         </TableRow>
+                 
+        <TextView
+                style="@style/LocationStatus"
+                android:id="@+id/location_desc"
+                android:singleLine="false"
+                android:lines="2" />
             
-    </TableLayout>
-    	         
-    <TextView
-			style="@style/LocationStatus"
-    		android:id="@+id/location_desc"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:singleLine="false"
-            android:lines="2" />
-
-    <TableLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:shrinkColumns="*"
-            android:stretchColumns="*">
-
-        <TableRow
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+        <TableRow>
             <TextView android:id="@+id/pass_name"
-                    style="@style/LocationAuxText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    style="@style/LocationAuxText" />
             <TextView android:id="@+id/pass_desc"
-                    style="@style/LocationAuxText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    style="@style/LocationAuxText" />
         </TableRow>
         
-        <TableRow
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+        <TableRow>
             <TextView android:id="@+id/pass_status"
-                    style="@style/LocationAuxText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    style="@style/LocationAuxText" />
             <TextView android:id="@+id/pass_dist"
-                    style="@style/LocationAuxText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    style="@style/LocationAuxText" />
         </TableRow>
     </TableLayout>
     		
     <HorizontalScrollView
             android:id="@+id/weather_scroller"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
             android:scrollbarAlwaysDrawHorizontalTrack="true"
-            android:scrollbarAlwaysDrawVerticalTrack="false" >
+            android:scrollbarAlwaysDrawVerticalTrack="false"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@id/location_data">
         
         <org.hermit.onwatch.WeatherWidget
                 android:id="@+id/weather_chart"
@@ -106,6 +79,14 @@
                 android:layout_height="fill_parent" />
 
     </HorizontalScrollView>
+                    
+    <org.hermit.onwatch.AnalogBarometer
+            android:id="@+id/weather_baro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignRight="@id/location_data"
+            android:layout_above="@id/weather_scroller"/>
 
-</LinearLayout>
+</RelativeLayout>
 
