--- a/On Watch/res/layout/home_view.xml
+++ b/On Watch/res/layout/home_view.xml
@@ -1,22 +1,162 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/home_view"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:orientation="horizontal" >
-        
-   <include
-		    layout="@layout/clock_view"
-		    android:layout_width="0dip"
-		    android:layout_height="fill_parent"
-            android:layout_weight="30" />
-    
-   <include
-		    layout="@layout/location_view"
-		    android:layout_width="0dip"
-		    android:layout_height="fill_parent"
-            android:layout_weight="70" />
+        android:padding="16dp" >
+                    
+    <LinearLayout android:id="@+id/clock_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginRight="32dp"
+            android:orientation="vertical" >
+                
+        <Button
+                android:id="@+id/clock_set_zone"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
 
-</LinearLayout>
+        <TextView
+                style="@style/ClockDateline"
+                android:id="@+id/clock_date"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
+                
+        <AnalogClock
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:dial="@drawable/clock_dial"
+                android:hand_hour="@drawable/clock_hand_hour"
+                android:hand_minute="@drawable/clock_hand_minute" />
+
+        <TextView
+                style="@style/ClockTime"
+                android:id="@+id/clock_time"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
+
+        <TextView
+                style="@style/ClockWatch"
+                android:id="@+id/clock_watch"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
+
+        <org.hermit.onwatch.BellWidget
+                android:id="@+id/clock_bells"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
+
+        <TextView
+                style="@style/ClockCrew"
+                android:background="@drawable/crew_bar_bg"
+                android:id="@+id/clock_watchcrew"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
+
+        <TextView
+                style="@style/ClockCrew"
+                android:id="@+id/clock_nextcrew"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
+
+    </LinearLayout>
+                    
+    <org.hermit.onwatch.AnalogBarometer
+            android:id="@+id/weather_baro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"/>
+
+    <TableLayout
+            android:id="@+id/location_data"
+            android:shrinkColumns="*"
+            android:stretchColumns="*"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@id/clock_view"
+            android:layout_toLeftOf="@id/weather_baro"
+            android:layout_marginRight="32dp">
+         
+        <TextView
+                style="@style/LocationStatus"
+                android:id="@+id/location_status" />
+         
+        <TextView
+                style="@style/LatLongText"
+                android:id="@+id/location_lat" />
+        
+        <TextView
+                style="@style/LatLongText"
+                android:id="@+id/location_lon" />
+            
+        <TableRow>
+         
+            <TextView
+                    style="@style/LocationAuxText"
+                    android:text="@string/lab_head" />
+            <TextView
+                    style="@style/LocationAuxText"
+                    android:id="@+id/location_head" />
+         
+            <TextView
+                    style="@style/LocationAuxText"
+                    android:text="@string/lab_speed" />
+            <TextView
+                    style="@style/LocationAuxText"
+                    android:id="@+id/location_speed" />
+        
+        </TableRow>
+                 
+        <TextView
+                style="@style/LocationStatus"
+                android:id="@+id/location_desc"
+                android:singleLine="false"
+                android:lines="2" />
+            
+        <TableRow>
+            <TextView android:id="@+id/pass_name"
+                    android:layout_span="2"
+                    style="@style/LocationAuxText" />
+            <TextView android:id="@+id/pass_desc"
+                    android:layout_span="2"
+                    style="@style/LocationAuxText" />
+        </TableRow>
+        
+        <TableRow>
+            <TextView android:id="@+id/pass_status"
+                    android:layout_span="2"
+                    style="@style/LocationAuxText" />
+            <TextView android:id="@+id/pass_dist"
+                    android:layout_span="2"
+                    style="@style/LocationAuxText" />
+        </TableRow>
+    </TableLayout>
+            
+    <HorizontalScrollView
+            android:id="@+id/weather_scroller"
+            android:scrollbarAlwaysDrawHorizontalTrack="true"
+            android:scrollbarAlwaysDrawVerticalTrack="false"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/clock_view"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/weather_baro"
+            android:layout_marginTop="32dp">
+        
+        <org.hermit.onwatch.WeatherWidget
+                android:id="@+id/weather_chart"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent" />
+
+    </HorizontalScrollView>
+
+</RelativeLayout>
 
