--- a/Chime Timer/res/layout/config_view.xml
+++ b/Chime Timer/res/layout/config_view.xml
@@ -1,33 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="horizontal" >
-        
-    <include android:id="@+id/timer1"
-            layout="@layout/timer_view"
-            android:layout_width="0dip"
-            android:layout_height="fill_parent"
-            android:layout_weight="1" />
-        
-    <include android:id="@+id/timer2"
-            layout="@layout/timer_view"
-            android:layout_width="0dip"
-            android:layout_height="fill_parent"
-            android:layout_weight="1" />
-        
-    <include android:id="@+id/timer3"
-            layout="@layout/timer_view"
-            android:layout_width="0dip"
-            android:layout_height="fill_parent"
-            android:layout_weight="1" />
-        
-    <include android:id="@+id/timer4"
-            layout="@layout/timer_view"
-            android:layout_width="0dip"
-            android:layout_height="fill_parent"
-            android:layout_weight="1" />
+       android:layout_width="fill_parent"
+       android:layout_height="fill_parent"
+       android:orientation="vertical">
+              
+    <Spinner android:id="@+id/timer_choice"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/timer_choices" />
+                    
+    <EditText android:id="@+id/name"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+            
+    <org.hermit.android.widgets.TimeoutPicker android:id="@+id/pre_time"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+            
+    <Spinner android:id="@+id/start_bell"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/bell_choices" />
+            
+    <org.hermit.android.widgets.TimeoutPicker android:id="@+id/run_time"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+            
+    <Spinner android:id="@+id/finish_bell"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/bell_choices" />
 
 </LinearLayout>
 
