Chime Timer: basic working.

--- a/Chime Timer/res/values/styles.xml
+++ b/Chime Timer/res/values/styles.xml
@@ -15,6 +15,13 @@
         <item name="android:singleLine">true</item>
     </style>
 
+    <style name="ClockSmallTime">
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:typeface">monospace</item>
+        <item name="android:textSize">24dp</item>
+        <item name="android:singleLine">true</item>
+    </style>
+
     <style name="BigButton">
         <item name="android:textSize">56dp</item>
     </style>
