--- a/Chime Timer/res/layout/main_view.xml
+++ b/Chime Timer/res/layout/main_view.xml
@@ -18,11 +18,15 @@
                 android:layout_height="wrap_content"
                 android:entries="@array/timer_choices" />
 
-		<TextView
-            	style="@style/ClockTime"
-				android:id="@+id/timer_time"
+		<TextView android:id="@+id/timer_pre"
+            	style="@style/ClockSmallTime"
         		android:layout_width="fill_parent"
         		android:layout_height="wrap_content" />
+
+        <TextView android:id="@+id/timer_time"
+                style="@style/ClockTime"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
 
         <Button android:id="@+id/start_button"
                 style="@style/BigButton"
