--- a/Chime Timer/res/menu/main_menu.xml
+++ b/Chime Timer/res/menu/main_menu.xml
@@ -17,5 +17,10 @@
           android:title="@string/menu_about"
     	  android:icon="@drawable/ic_menu_info" />
     	  
+    <!-- "Exit". -->
+    <item android:id="@+id/menu_exit"
+          android:title="@string/menu_exit"
+          android:icon="@drawable/ic_menu_exit" />
+    	  
 </menu>
 
